Fixed wrapping/word break issues in h1-6 tags

--- a/less/kanji.less
+++ b/less/kanji.less
@@ -48,7 +48,7 @@ body {
 
     background: @primary_color;
     min-height: 7em;
-    padding-top: 0;
+    padding: 1em;
 
     h1,h2 {
         .text_drop_shadow();
