--- a/less/typography.less
+++ b/less/typography.less
@@ -5,14 +5,16 @@ Typography - requires mixins
 ***************************************************************/
 html{
 
-    font-family: 'CartoGothic', 'Arial', 'SansSerif';
+    font-family: 'CartoGothic', 'Arial';
     font-size: 105%;
 }
 
 h1, h2, h3,
 h3, h5, h6 {
-    font-family: 'Archive', 'Arial', 'SansSerif';
+    font-family: 'Archive', 'Arial';
     font-weight: normal;
+    word-wrap: normal;
+    word-break: keep-all;
 }
 
 h1{
